gateway-vertx/xebialabs/package/route-gw.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    application: coolstore
    component: coolstore-gw
  name: gw
spec:
  to:
    kind: Service
    name: gw
